--- a/src/ContaPapagneApp/templates/set/listaCategorie.html
+++ b/src/ContaPapagneApp/templates/set/listaCategorie.html
@@ -1,59 +1,14 @@
 <div class="container-fluid">
-        <style>
-            .grid-header {
-                display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                background-color: #f2f2f2;
-            }
-        
-            .grid-header-cell {
-                background-color: #134e4a;
-                color: white;
-                padding: 10px;
-                text-align: left;
-                text-transform: uppercase;
-                font-weight: bold;
-            }
-            
-            .grid-row {
-                background-color: white;
-                border-bottom: 1px solid #ddd;
-                padding: 8px;
-            }
-            
-            .grid-content {
-                display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                gap: 5px;
-                padding: 5px;
-                background-color: #f2f2f2;
-                border-collapse: collapse;
-                overflow-y: auto;
-                max-height: 200px;
-            }
-            
-            .categoria {
-                background-color: #134e4a;
-                padding: 3px;
-                border-radius: 5px;
-                color: #f2f2f2;
-            }
-        </style>
-    
-        <div class="grid-table">
-            <div class="grid-header">
-                <div class="grid-header-cell">Nome</div>
-                <div class="grid-header-cell">Tipologia</div>
-                <div class="grid-header-cell">Descrizione</div>
-            </div>
-            <div class="grid-content">
-                {% for item in categorie %}
-                <div class="grid-row">{{ item.nome }}</div>
-                <div class="grid-row">{{ item.tipologia }}</div>
-                <div class="grid-row">{{ item.descrizione }}</div>
-                <div hidden>{{ item.id_categoria }}</div>
-                {% endfor %}
-            </div>
-        </div>
+    <div class="row bg-dark text-white text-uppercase font-weight-bold py-2">
+        <div class="col-4">Nome</div>
+        <div class="col-2">Tipologia</div>
+        <div class="col-6">Descrizione</div>
     </div>
-    
+    <div class="row bg-light overflow-auto" style="max-height: 200px;">
+        {% for item in categorie %}
+        <div class="col-4 border-bottom p-2">{{ item.nome }}</div>
+        <div class="col-2 border-bottom p-2">{{ item.tipologia }}</div>
+        <div class="col-6 border-bottom p-2">{{ item.descrizione }}</div>
+        {% endfor %}
+    </div>
+</div>
