--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -137,11 +137,15 @@
 		</div>
 </div>
 
-	<div class="form-group mb-3">
-			<label for="risarcimento_movimento">Risarcimento:</label>
-			<input class="form-control" id="risarcimento_movimento" name="risarcimento_movimento" type="text" placeholder="Importo Risarcimento" disabled>
-			<small class="form-text text-muted" id="risarcimentoHelp">Compilare solo se applicabile.</small> 
-	</div> 
+  <div class="form-group mb-3">
+      <label for="risarcimento_movimento" class="tooltip-label d-flex" style="gap:5px">Risarcimento
+				<span class="tooltip-trigger" data-bs-toggle="tooltip" data-bs-placement="top" title="Your helpful tooltip text" style="width: 20px; height: 20px;">
+					<img src="../static/img/question-mark.svg" alt="Question Mark" width="16" height="16"> 
+				</span>
+			</label> 
+      <input class="form-control" id="risarcimento_movimento" name="risarcimento_movimento" type="text" placeholder="Importo Risarcimento" disabled>
+      <small class="form-text text-muted" id="risarcimentoHelp">Compilare solo se applicabile.</small> 
+  </div> 
 
 	<div class="form-group mb-4">
 			<label for="descrizione_movimento">Descrizione:</label>
@@ -153,6 +157,11 @@
 
 
 <script>
+	var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+  return new bootstrap.Tooltip(tooltipTriggerEl)
+})
+
 	document.addEventListener("DOMContentLoaded", function() {
 			var input = document.querySelector('input[name="categoria_movimento"]');
 			var tagify = new Tagify(input, {
