--- a/src/ContaPapagneApp/templates/mov/dashboard-movimenti.html
+++ b/src/ContaPapagneApp/templates/mov/dashboard-movimenti.html
@@ -17,6 +17,13 @@
       </div>
   
       <div class="col-12 col-lg-6">
+        <div class="card" style="margin-bottom: 1rem;">
+          <div class="card-header">
+            <h5 class="card-title fw-bold mb-0">Andamento Movimenti</h5>
+          </div>
+          <div class="card-body d-flex align-items-center justify-content-center" style="height: 160px;">
+            </div>
+        </div>
         <div class="card">
           <div class="card-header">
             <h5 class="card-title fw-bold mb-0">Andamento Movimenti</h5>
@@ -24,7 +31,9 @@
           <div class="card-body d-flex align-items-center justify-content-center" style="height: 160px;">
             </div>
         </div>
+        
       </div>
+      
     </div>
   
     <div class="card">
