--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -1,4 +1,34 @@
 <style>
+/* styling per  category labels */
+	@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+	.tag {
+		display: inline-block;
+		padding: 6px 12px;
+		background-color: #f8f8f8; 
+		border: none;
+		border-radius: 3px;
+		margin: 4px;
+		position: relative;
+		font-family: 'Roboto', sans-serif;
+		box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1); 
+	}
+	
+	.tag:hover {
+		background-color: #f0f0f0; 
+	}
+	
+	.rimuovi img {  
+		width: 12px;   
+		height: 12px; 
+		cursor: pointer;
+		opacity: 0.7;              
+		transition: opacity 0.2s ease; 
+	}
+	
+	.rimuovi img:hover {
+		opacity: 1;  }
+
+/* styling per  toggle */
 
 .highlight-checkbox {
 	background-color: #ffc6a2;
@@ -152,7 +182,13 @@
 		<label for="descrizione_movimento">Descrizione:</label>
 		<textarea class="form-control" id="descrizione_movimento" name="descrizione_movimento" placeholder="Note Aggiuntive" rows="1"></textarea>
 </div> 
-
+<!-- Test label categorie -->
+<div class="tag">
+  <span class="label-text">Opzione 1</span>
+  <span class="rimuovi">
+    <img src="../static/img/close.svg" alt="close"> 
+  </span>
+</div>
 
 	<button type="submit" class="btn btn-primary btn-lg">Registra</button> 
 </form>
