Experiment concluded. Si implementerà con tagify

--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -138,7 +138,11 @@
 	<fieldset class="mb-3"> 
 		<label for="tipologia_movimento">Tipo di form:</label>
 			<div class="form-check form-switch">
-				<input class="form-check-input highlight-checkbox" id="tipologia_movimento" name="tipologia_movimento" type="checkbox" value="true" onchange="switchTipoMovimento();toggleTooltipVisibility();boldTipologia()">					<label class="form-check-label" for="tipologia_movimento"><span id="uscita" class="uscita highlight">USCITA</span><span id="entrata"class="hide entrata">ENTRATA</span></label>
+				<input class="form-check-input highlight-checkbox" id="tipologia_movimento" name="tipologia_movimento" type="checkbox" value="true" onchange="switchTipoMovimento();toggleTooltipVisibility();boldTipologia()">
+				<label class="form-check-label" for="tipologia_movimento">
+					<span id="uscita" class="uscita highlight">USCITA</span>
+					<span id="entrata"class="hide entrata">ENTRATA</span>
+				</label>
 			</div>
 	</fieldset>
 
