Aggiunta persistenza del colore

--- a/src/ContaPapagneApp/templates/set/settings.html
+++ b/src/ContaPapagneApp/templates/set/settings.html
@@ -5,8 +5,8 @@
 					<input type="text" id="nome_categoria" name="nome_categoria" class="form-control" placeholder="Nome">
 			</div>
 			<div>
-				<label for="categoria_colore">Colore:</label>
-				<input type="color" id="categoria_colore" name="categoria_colore">
+				<label for="colore_categoria">Colore:</label>
+				<input type="color" id="colore_categoria" name="colore_categoria">
 			</div>
 			<div class="mb-3">
 					<label class="form-label">Tipologia</label>
