--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -1,4 +1,38 @@
 <style>
+	.tags-look .tagify__dropdown__item{
+		display: inline-block;
+		vertical-align: middle;
+		border-radius: 3px;
+		padding: .3em .5em;
+		border: 1px solid #CCC;
+		background: #F3F3F3;
+		margin: .2em;
+		font-size: .85em;
+		color: black;
+		transition: 0s;
+	}
+	
+	.tags-look .tagify__dropdown__item--active{
+		color: black;
+	}
+	
+	.tags-look .tagify__dropdown__item:hover{
+		background: lightyellow;
+		border-color: gold;
+	}
+	
+	.tags-look .tagify__dropdown__item--hidden {
+			max-width: 0;
+			max-height: initial;
+			padding: .3em 0;
+			margin: .2em 0;
+			white-space: nowrap;
+			text-indent: -20px;
+			border: 0;
+	}
+
+
+
 /* styling per  category labels */
 	@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 	.tag {
@@ -171,6 +205,15 @@
 				<div id="res_fetch" class="autocomplete-results"></div>
 		</div>
 </div>
+<!-- tagify -->
+
+<div class="form-group mb-3"> 
+	<label for="categoria_movimento">Categoria:</label>
+	<div class="input-group"> 
+		<input name='input-custom-dropdown' class='some_class_name' placeholder='write some tags' value=''>
+			<div id="res_fetch" class="autocomplete-results"></div>
+	</div>
+</div>
 
   <div class="form-group mb-3">
       <label for="risarcimento_movimento" class="tooltip-label d-flex" style="gap:5px">Risarcimento
@@ -194,8 +237,31 @@
   </span>
 </div>
 
+
+
+
 	<button type="submit" class="btn btn-primary btn-lg">Registra</button> 
 </form>
+
+
+<script>
+
+	var input = document.querySelector('input[name="input-custom-dropdown"]'),
+	
+			tagify = new Tagify(input, {
+				whitelist: ["ciao"],
+				maxTags: 10,
+				dropdown: {
+					maxItems: 20,
+					classname: "tags-look",
+					enabled: 0,
+					closeOnSelect: false
+				}
+			})
+	
+	</script>
+
+
 
 
 <script>
@@ -237,5 +303,8 @@ function boldTipologia() {
 	}
 }
 
-	</script>
+</script>
+
+
+
 	
